--- a/fuse_constraints/package.xml
+++ b/fuse_constraints/package.xml
@@ -15,6 +15,7 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>cpr_scalopus</depend>
   <depend>libceres-dev</depend>
   <depend>eigen</depend>
   <depend>fuse_core</depend>
